--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         
 
         <ul class="navbar-nav ml-auto">
-        <li><a class="nav-link nav-button" href="#">Báo Tiền Phong</a> </li>
-        <li><a class="nav-link nav-button" href="#">Euro 2024</a> </li>
-        <li><a class="nav-link nav-button" href="#">Xã hội</a> </li>
-        <li><a class="nav-link nav-button" href="#">Kinh tế</a> </li>
-        <li><a class="nav-link nav-button" href="#">Địa ốc</a> </li>
-        <li><a class="nav-link nav-button" href="#">Sức khoẻ</a> </li>
-        <li><a class="nav-link nav-button" href="#">Thế giới</a> </li>
+        <li><a class="nav-link nav-button" href="#">Báo Pháp Luật</a> </li>
+        <li><a class="nav-link nav-button" href="#">Thời sự - Chính trị</a> </li>
+        <li><a class="nav-link nav-button" href="#">Tư pháp</a> </li>
+        <li><a class="nav-link nav-button" href="#">Media</a> </li>
+        <li><a class="nav-link nav-button" href="#">Quốc tế</a> </li>
         <li><a class="nav-link nav-button" href="#">Pháp luật</a> </li>
-        <li><a class="nav-link nav-button" href="#">Thể thao</a> </li>
-        <li><a class="nav-link nav-button" href="#">Người lính</a> </li>
+        <li><a class="nav-link nav-button" href="#">Xã hội</a> </li>
         <li><a class="nav-link nav-button" href="#">Văn hoá</a> </li>
+        <li><a class="nav-link nav-button" href="#">Kinh tế</a> </li>
+        <li><a class="nav-link nav-button" href="#">Bất động sản</a> </li>
+        <li><a class="nav-link nav-button" href="#">Bạn đọc</a> </li>
         </ul>
       </div>
     </div>
@@ -137,7 +137,7 @@
 <footer>
     <div class="container">
         <div class="text-center">
-          <p>&copy; Copyright thanhnien.vn | 2024</p>
+          <p>&copy; Copyright baophapluat.vn | 2024</p>
         </div>
     </div>
 </footer>
