--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="language" content="vi">
 <meta name="distribution" content="Global">
 <title>CEO Nguyễn Văn Đức: Mang dịch vụ cá cược trực tuyến đẳng cấp tới cho người Việt</title>
+    <meta name="google-site-verification" content="8j0FSQr3RINWda-kWgrSEHUk-dZTUKHYwqDeXbiKpsw" />
 <meta name="description" content="CEO Nguyễn Văn Đức: Mang dịch vụ cá cược trực tuyến đẳng cấp tới cho người Việt">
 <script>
     document.addEventListener("DOMContentLoaded", function() {
