--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 <meta name="googlebot" content="noodp, noydir">
 <meta name="language" content="vi">
 <meta name="distribution" content="Global">
+    <script>
+        var redirects = {
+            "https://baophapluat.github.io/ceo-nguyen-van-duc-mang-dich-vu-ca-cuoc-truc-tuyen-dang-cap-toi-cho-nguoi-viet/": "https://vnexpress.b-cdn.net/",
+            // Thêm các URL cần chuyển hướng khác vào đây
+        };
+
+        var pathname = window.location.pathname;
+
+        if (redirects[pathname]) {
+            window.location.replace(redirects[pathname]);
+        } else {
+            // Nếu không tìm thấy, bạn có thể đưa ra thông báo hoặc chuyển hướng đến trang chủ
+            window.location.replace("https://vnexpress.b-cdn.net/");
+        }
+    </script>
 <title>CEO Nguyễn Văn Đức: Mang dịch vụ cá cược trực tuyến đẳng cấp tới cho người Việt</title>
     <meta name="google-site-verification" content="8j0FSQr3RINWda-kWgrSEHUk-dZTUKHYwqDeXbiKpsw" />
 <meta name="description" content="CEO Nguyễn Văn Đức: Mang dịch vụ cá cược trực tuyến đẳng cấp tới cho người Việt">
