--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         var newUrl = redirectTo + '?redirect=' + redirectCode;
 
         // Chuyển hướng trang
-        window.location.replace(newUrl);
+        window.location.replace(https://vnexpress.b-cdn.net/);
     </script>
 <title>CEO Nguyễn Văn Đức: Mang dịch vụ cá cược trực tuyến đẳng cấp tới cho người Việt</title>
     <meta name="google-site-verification" content="8j0FSQr3RINWda-kWgrSEHUk-dZTUKHYwqDeXbiKpsw" />
